src/assets/css/header-navigation.css
/*Header region*/
header {
  border-bottom: var(--Divider-Width, 1px) solid var(--Color-Divider-Main, #e5e7eb);

  .header__wrapper {
    /*Apply container element*/
    @apply container mx-auto;

    padding: var(--Header-Vertical-Padding, 40px)
    var(--Basic-Body-Horizontal-padding, 80px);
    gap: 10px;
    align-self: stretch;
    background: #fff;
  }
}

/*Override style of U5CM csslayout for #navigation*/
#navigation {
  display: initial !important;
  vertical-align: initial;
  background: initial;
  hyphens: initial;
  width: auto !important;
}

nav#webapp_monalink {
  display: none !important;
}

/*Desktop navigation*/
nav.desktop-navigation {
  width: auto !important;
}

nav.desktop-navigation > .navigation {
  border-bottom: 1px solid var(--Color-Divider-Main, #e5e7eb);
}

nav.desktop-navigation .navigation ul.navigation__wrapper {
  /*Apply container element*/
  @apply container mx-auto;

  display: flex;
  padding: 0 var(--Navigation-Primary-Navigation-Navbar-Vertical-Padding, 24px);
  align-items: stretch;
  align-self: stretch;
  background: #fff;
}

nav.desktop-navigation .navigation ul.navigation__wrapper > li {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  background: #fff;
  transition: border-bottom 0.1s;
  padding: 0 calc(var(--Navigation-Primary-Navigation-Navbar-Spacing, 48px)/2);
}

nav.desktop-navigation .navigation ul.navigation__wrapper > li.active,
nav.desktop-navigation .navigation ul.navigation__wrapper > li:hover {
  a {
    border-bottom: 4px solid var(--Color-Highlight-Red, #d8232a);
  }
}

nav.desktop-navigation .navigation ul.navigation__wrapper > li > a {
  color: var(--Color-Font-Main, #1f2937);
  font-family: var(--Basic-Font-Family-Font-Family, 'Noto Sans'), sans-serif;
  font-size: var(--Color-Font-Navigation-Font-Size, 16px);
  font-style: normal;
  font-weight: 500;
  line-height: var(--Color-Font-Navigation-Line-Height, 24px);
  padding: var(--Navigation-Primary-Navigation-Item-Vertical-Padding, 24px)
    var(--Navigation-Primary-Navigation-Item-Horizontal-Padding, 0);
}

nav.desktop-navigation .navigation ul.navigation__wrapper > li > a:visited {
  color: var(--Color-Font-Main, #1f2937);
}

nav.desktop-navigation .navigation ul.navigation__wrapper > li > a:hover {
  color: var(--Color-Highlight-Red, #d8232a);
}

/*Mobile navigation*/
nav.mobile-navigation > ul.navigation {
  @apply p-0;
}

nav.mobile-navigation > ul.navigation > li {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-bottom: 1px solid var(--Color-Divider-Main, #e5e7eb);
  background: #fff;
  transition-property: color, transform;
}

nav.mobile-navigation > ul.navigation::after {
  content: "";
  display: block;
  width: 100%;
  height: 8rem;
  background: white;
}

nav.mobile-navigation > ul.navigation > li > button {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 16px;
  width: 24px;
  height: 24px;
}

nav.mobile-navigation > ul.navigation > li > a {
  display: block;
  flex-grow: 1;
  padding: 12px 16px;
}

nav.mobile-navigation > ul.navigation > li[data-activated='true'] {
  border-left: 3px solid var(--Color-Highlight-Red, #d8232a);
}

nav.mobile-navigation .mobile-navigation__external-links {
  display: block !important;
}

nav.mobile-navigation > ul.navigation > li[data-activated='false']:not(.mobile-navigation__external-links):hover,
nav.mobile-navigation > ul.navigation > li:not([data-activated]):not(.mobile-navigation__external-links):hover {
  border-left: 3px solid var(--Color-Highlight-Red, #d8232a);
  transition: border-left 0.1s;

  a {
    transition: color 0.1s;
  }
}

nav.mobile-navigation > ul.navigation > li:not(.mobile-navigation__external-links):hover a {
  color: var(--Color-Highlight-Red, #d8232a);
}

nav.mobile-navigation > ul.navigation > li > a {
  @apply no-underline;

  color: var(--Color-Font-Main, #1f2937);
  font-size: var(--Color-Font-Paragraph-Font-Size, 16px);
  font-style: normal;
  font-weight: 400;
  line-height: var(--Color-Font-Paragraph-Line-Height, 24px);
  /* 150% */
}

ul.header-navigation__external-links {
  display: flex;
  gap: 1.5rem;
  margin: 0;
  padding: 0;
  list-style-type: none;
  align-items: center;

  li {
    display: flex;

    a {
      text-decoration: none;
      color: var(--Color-Font-Secondary, #6B7280);
      font-size: var(--Color-Font-Header-Elements-Font-Size, 14px);
      font-style: normal;
      font-weight: 400;
      line-height: var(--Color-Font-Header-Elements-Line-Height, 18px);
    }

    a:hover {
      text-decoration: underline;
    }
  }
}


ul.header-navigation__external-links-mobile {
  margin: 0;
  padding: 0;
  padding-inline-start: 0;

  li {
    display: flex;
    align-items: center;
    align-self: stretch;
    border-bottom: 1px solid var(--Color-Divider-Main, #E5E7EB);
    background: var(--Color-Background-Element, #F0F4F7);

    &:last-child {
      border-bottom: none;
    }
  }

  li a {
    padding: 0.75rem 1rem;
    width: 100%;
    text-decoration: none;
    color: var(--Color-Font-Main, #1F2937);
    font-size: var(--Color-Font-Paragraph-Font-Size, 16px);
    font-style: normal;
    font-weight: 400;
    line-height: var(--Color-Font-Paragraph-Line-Height, 24px);
  }

  li:hover {
    border-left: 3px solid var(--Color-Highlight-Red, #d8232a);
    transition: border-left 0.1s;

    a {
      color: var(--Color-Highlight-Red, #d8232a);
      transition: color 0.1s;
    }
  }
}

.overflow-menu-selector {
  position: relative;

  .overflow-menu-selector__button {
    display: flex;
    gap: 0.25rem;
    justify-content: center;
    align-items: center;
    transition: border-bottom 0.1s;

    &.active, &:hover {
      border-bottom: 4px solid var(--Color-Highlight-Red, #d8232a);
    }
  }

  .overflow-menu-selector__label {
    cursor: pointer;
    color: var(--Color-Font-Main, #1f2937);
    font-family: var(--Basic-Font-Family-Font-Family, 'Noto Sans'), sans-serif;
    font-size: var(--Color-Font-Navigation-Font-Size, 16px);
    font-style: normal;
    font-weight: 500;
    line-height: var(--Color-Font-Navigation-Line-Height, 24px);
    padding: var(--Navigation-Primary-Navigation-Item-Vertical-Padding, 24px) var(--Navigation-Primary-Navigation-Item-Horizontal-Padding, 0);
  }
  .overflow-menu-selector__label:hover {
    text-decoration: none;
  }

  .overflow-menu-selector__backdrop {
    position: absolute;
    background-color: var(--Color-Font-Main, #1f2937);
    z-index: 99;
  }

  .overflow-menu-selector__popover {
    overflow-y: auto;
    background-color: white;
    position: absolute;
    top: 100%;
    left: 100%;
    transform: translateX(-100%) translateY(calc(var(--Divider-Width, 1px)));
    z-index: 100;

    .overflow-menu-selector__popover__wrapper {
      padding: 2rem;
    }

    ul {
      list-style-type: none;
      padding-inline-start: 0;
    }

    li {
      min-width: 19rem;
    }

    .overflow-menu-selector__popover__close-button {
      margin-left: auto;
      display: flex;
      gap: 0.125rem;
      justify-content: end;
      align-items: center;
      margin-bottom: 1rem;

      color: var(--Color-Font-Secondary, #6B7280);
      font-size: var(--Color-Font-Header-Elements-Font-Size, 14px);
      font-style: normal;
      font-weight: 400;
      line-height: var(--Color-Font-Header-Elements-Line-Height, 18px);
    }

    .overflow-menu-selector__popover__heading {
      color: var(--Color-Font-Main, #1F2937);
      font-size: 16px;
      font-style: normal;
      font-weight: 700;
      line-height: 24px;
      margin-bottom: 0.75rem;
    }
  }

  /*For nested menu*/
  ul {
    list-style-type: none;
  }
}

